--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 /* App style */
 *,*::before,*::after{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
